# rust-monaco

./: .gitignore
examples/: .gitignore
examples/yew/: Cargo.toml  Makefile  index.html  styles.scss
examples/yew/src/: ext.rs  lib.rs
examples/yew/static/: monaco-editor-0.32.1.js  monaco-editor.css.0.32.1.js  monaco-editor.editorWorkerService.0.32.1.js  monaco-editor.html.0.32.1.js  monaco-editor.json.0.32.1.js
js/: editor.js
src/api/: mod.rs
src/sys/: editor.rs  mod.rs
src/workers/: mod.rs
ts2rs/: Pipfile  monaco.d.ts
