[package]
name = "yew"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
monaco = { path = "../..", features = ["yew-components"] }
wasm-bindgen = "0.2"
yew = "0.19"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"

[profile.release]
strip = "debuginfo"
lto = true
incremental = false
codegen-units = 1

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "Url",
    "Window",
    "Worker"
]
